Back to basics - remove delombok in javadoc, ignore versionsBackup in repository